5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1758_1576.log
== TEST (2019-05-23 10:46:06) 
-- CODE:
from numpy import*
e = array(eval(input("vetor: "))) 
b = array(eval(input("vetor: ")))
pedra = 11
papel = 22
tesoura = 33

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:46:16) 
-- CODE:
from numpy import*
e = array(eval(input("vetor: "))) 
b = array(eval(input("vetor: ")))
pedra = 11
papel = 22
tesoura = 33

-- EXECUTION TIME:
0.437162
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:26:33) 
-- CODE:
from numpy import*
e = array(eval(input("vetor e: "))) 
b = array(eval(input("vetor b: ")))
i = 0
somae = 0
somab = 0
while(i < size(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
	elif(e[i] == 33 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "empate"






-- EXECUTION TIME:
71.5183
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:26:33) 
-- CODE:
from numpy import*
e = array(eval(input("vetor e: "))) 
b = array(eval(input("vetor b: ")))
i = 0
somae = 0
somab = 0
while i < size(e):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
	elif(e[i] == 33 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "empate"






-- EXECUTION TIME:
24.5498
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:26:33) 
-- CODE:
from numpy import*
e = array(eval(input("vetor e: "))) 
b = array(eval(input("vetor b: ")))
i = 0
somae = 0
somab = 0
while i < size(e):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
	elif(e[i] == 33 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "empate"






-- EXECUTION TIME:
24.7271
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
task 266428aa99e5599bb16b480289155a43092587454d55860e464f6870981f9856 not found: not found
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:26:33) 
-- CODE:
from numpy import*
e = array(eval(input("vetor e: "))) 
b = array(eval(input("vetor b: ")))
i = 0
somae = 0
somab = 0
while i < size(e):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
	elif(e[i] == 33 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "empate"






-- EXECUTION TIME:
32.9116
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 13:15:01) 
-- CODE:
from numpy import*
e = array(eval(input("vetor e: "))) 
b = array(eval(input("vetor b: ")))
i = 0
somae = 0
somab = 0
while i < size(e):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
	elif(e[i] == 33 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"






-- EXECUTION TIME:
2195.66
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 13:16:02) 
-- CODE:
from numpy import*
e = array(eval(input("vetor e: "))) 
b = array(eval(input("vetor b: ")))
i = 0
somae = 0
somab = 0
while i < size(e):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
	elif(e[i] == 33 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"






-- EXECUTION TIME:
2142.41
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 13:16:02) 
-- CODE:
from numpy import*
e = array(eval(input("vetor e: "))) 
b = array(eval(input("vetor b: ")))
i = 0
somae = 0
somab = 0
while i < size(e):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
	elif(e[i] == 33 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"






-- EXECUTION TIME:
2255.64
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 13:16:02) 
-- CODE:
from numpy import*
e = array(eval(input("vetor e: "))) 
b = array(eval(input("vetor b: ")))
i = 0
somae = 0
somab = 0
while i < size(e):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
	elif(e[i] == 33 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"






-- EXECUTION TIME:
2195.49
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 13:17:01) 
-- CODE:
from numpy import*
e = array(eval(input("vetor e: "))) 
b = array(eval(input("vetor b: ")))
i = 0
somae = 0
somab = 0
while i < size(e):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
	elif(e[i] == 33 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"






-- EXECUTION TIME:
2135.46
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 13:18:01) 
-- CODE:
from numpy import*
e = array(eval(input("vetor e: "))) 
b = array(eval(input("vetor b: ")))
i = 0
somae = 0
somab = 0
while i < size(e):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
	elif(e[i] == 33 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"






-- EXECUTION TIME:
2195.63
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:25:22) 
-- CODE:
from numpy import*
e = array(eval(input("vetor e: "))) 
b = array(eval(input("vetor b: ")))
i = 0
somae = 0
somab = 0
while i < size(e):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
		i = i + 1
	elif(b[i] == 33 and e[i] == 11) or (b[i] == 11 and e[i] == 22) or (b[i] == 22 and e[i] == 33):
		somab = somab + 1
		i = i + 1
	else:
		msg =






-- ERROR:
File "XXXX", line 15
    msg =
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:29:06) 
-- CODE:
from numpy import*
e = array(eval(input("vetor e: "))) 
b = array(eval(input("vetor b: ")))
i = 0
somae = 0
somab = 0
while i < size(e):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
		i = i + 1
	elif(b[i] == 33 and e[i] == 11) or (b[i] == 11 and e[i] == 22) or (b[i] == 22 and e[i] == 33):
		somab = somab + 1
		i = i + 1
	else:
		i = i + 1
print(i)
if(somae>somab):
		print("EUSAPIA")
elif(somab>somae):
		print("BARSANULFO")
else:
		print("EMPATE")






-- EXECUTION TIME:
0.485563
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EUSAPIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:30:57) 
-- CODE:
from numpy import*
e = array(eval(input("vetor e: "))) 
b = array(eval(input("vetor b: ")))
i = 0
somae = 0
somab = 0
while i < size(e):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
		i = i + 1
	elif(b[i] == 11 and e[i] == 33) or (b[i] == 22 and e[i] == 11) or (b[i] == 33 and e[i] == 22):
		somab = somab + 1
		i = i + 1
	else:
		i = i + 1
print(i)
if(somae>somab):
		print("EUSAPIA")
elif(somab>somae):
		print("BARSANULFO")
else:
		print("EMPATE")






-- EXECUTION TIME:
0.508293
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
